Fix ContentSuggestions inset on iPad and landscape

The size of the items displayed by the collection is not based on the
inset of its section. It allows ContentSuggestions to display correctly
on iPad and iPhone landscape by adjusting the inset for all sections.

Bug: 740564, 740563
Change-Id: I77edf2d01a45964a527b60e882d9a7eda97a0429
Reviewed-on: https://chromium-review.googlesource.com/584831
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489288}
Former-commit-id: b8b88f80d4523fce8e2111d80a94d7e9e0fba613